@@ -203,7 +203,7 @@ namespace MonoDevelop.XmlEditor.Gui
 			}
 			
 			//attribute name completion
-			if ((forced && Tracker.Engine.Nodes.Peek () is IAttributedXObject)
+			if ((forced && Tracker.Engine.Nodes.Peek () is IAttributedXObject && !tracker.Engine.Nodes.Peek ().IsEnded)
 			     || (Tracker.Engine.CurrentState is XmlNameState 
 			 	 && Tracker.Engine.CurrentState.Parent is XmlAttributeState
 			         && Tracker.Engine.CurrentStateLength == 1)
@@ -276,6 +276,12 @@ namespace MonoDevelop.XmlEditor.Gui
 //				if (line < 3) {
 //				cp.Add ("<?xml version=\"1.0\" encoding=\"UTF-8\" ?>");
 //			}
+			
+			if (forced && Tracker.Engine.CurrentState is S.XmlFreeState) {
+				CompletionDataList list = new CompletionDataList ();
+				MonoDevelop.Ide.CodeTemplates.CodeTemplateService.AddCompletionDataForFileName (Document.Title, list);
+				return list.Count > 0? list : null;
+			}
 			
 			return null;
 		}
